k8s-google-cloud-demo/load-balance-ingress/my-ingress-old.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "my-ingress"
  namespace: "default"
spec:
  rules:
    - http:
        paths:
          - path: "/*"
            backend:
              serviceName: "hello-world"
              servicePort: 60000
          - path: "/kube"
            backend:
              serviceName: "hello-kubernetes"
              servicePort: 80
