k8s-google-cloud-demo/load-balance-ingress/my-ingress.yaml
# Warning: networking.k8s.io/v1beta1 Ingress is deprecated in v1.19+, unavailable in v1.22+; use networking.k8s.io/v1 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 60000
          - path: /kube
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port:
                  number: 80
